adl-frontend/src/test/resources/unit/error/semantic/attributes/attr7.adl
primitive attributes.attr7(a) {
  attribute string stringAttr = a;
}
